--- a/content/sass/_tooltips.scss
+++ b/content/sass/_tooltips.scss
@@ -7,7 +7,7 @@
 // Building With HTML Classes
 //
 //Markup:
-//<span data-tooltip class="has-tip" title="Tooltips are awesome, you should totally use them!">
+//<span data-tooltip class="has-tip" title="This is an example of extended information with a tooltip">
 //  extended information
 //</span>
 //
